--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,13 +6,13 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
 <head>
     <title>Login Page</title>
 
-    <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css}"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
 <body>
 <div class="container">
     <h1>Login page</h1>
-
     <div th:if="${param.error}" class="alert alert-danger">Invalid username and password.</div>
     <div th:if="${param.logout}" class="alert alert-danger">You have been logged out.</div>
 
