--- a/src/main/resources/templates/registrationtask.html
+++ b/src/main/resources/templates/registrationtask.html
@@ -7,6 +7,8 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorator="la
     <title>Registration Page</title>
 
     <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css}"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="/js/jquery-1.7.2.js"></script>
     <script src="/js/pwstrength.js"></script>
 
