Fixed some errors

--- a/src/main/resources/templates/listperson.html
+++ b/src/main/resources/templates/listperson.html
@@ -49,7 +49,9 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorator="la
                     <th scope="col">Lastname 1</th>
                     <th scope="col">Lastname 2</th>
                     <th scope="col">Email</th>
-                    <th scope="col">Created</th>
+                    <th scope="col">Role</th>
+                    <th scope="col">Created</th>                    
+                    <th scope="col">Disabled</th>                    
                     <th scope="col"></th>
                     <th scope="col"></th>
                     <th scope="col"></th>
@@ -65,7 +67,9 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorator="la
                     <td><a th:text="${viewperson.lastname1}"> Lastname 1 </a></td>
                     <td><a th:text="${viewperson.lastname2}"> Lastname 2 </a></td>
                     <td><a th:text="${viewperson.email}"> Email </a></td>
+                    <td><a th:text="${viewperson.role.name}"> Role </a></td>
                     <td th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(viewperson.startDate), #dates.month(viewperson.startDate), #dates.day(viewperson.startDate),'UTC'), 'yyyy-MMM-dd')}">July 11, 2012 2:17:16 PM CDT</td>
+                    <td th:text="${viewperson.endDate} ? ${#calendars.format(#calendars.createForTimeZone(#dates.year(viewperson.endDate), #dates.month(viewperson.endDate), #dates.day(viewperson.endDate),'UTC'), 'yyyy-MMM-dd')}">July 11, 2012 2:17:16 PM CDT</td>                    
                     <td><a href="viewperson.html" th:href="@{'/person/' + ${viewperson.id}}"><span class="material-icons">visibility</span></a></td>
                     <td><a href="formperson.html" th:href="@{'/person/viewmodify/' + ${viewperson.id}}"> 
                     	<span class="material-icons">mode_edit</span></a></td>
